# slurp

./: .gitignore  CHANGELOG.md  LICENSE  README.MD  slurp.cabal
app/: Main.hs
src/: BlockSample.hs  Schema.hs
src/Servant/IpRegistry/: Api.hs  Client.hs
