cabal-version:      2.4
name:               slurp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Karl Knutsson
maintainer:         karl.fb.knutsson@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
     build-depends:    base ^>=4.14.3.0
                    , aeson
                    , persistent
                    , text

    hs-source-dirs:   src
    exposed-modules:  BlockSample
                      Schema
    default-language: Haskell2010
    ghc-options:
                      -Wall
                      -Wcompat

executable slurp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , mtl
                    , monad-logger
                    , net-mqtt
                    , network-uri
                    , persistent-postgresql
                    , slurp
                    , text
                    , utf8-string
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded
                      -Wall
                      -Wcompat
